[package]
name = "slazy"
version = "0.1.0"
edition = "2021"
authors = ["Brian3647 <victoris3647@gmail.com>"]
repository = "https://github.com/Brian3647/slazy"
license = "MIT"
description = "A simple signal for lazy loading."
include = ["README.md", "LICENSE", "Cargo.toml", "src/lib.rs"]

[dependencies]
