[package]
name = "slazy"
version = "0.1.0"
edition = "2021"
authors = ["Brian3647 <vicmdv@duck.com>"]
repository = "https://github.com/Brian3647/slazy"
license = "MIT"
description = "A simple, small, no-std, macro-based lazy static library for Rust."
include = ["README.md", "LICENSE", "Cargo.toml", "src/lib.rs"]

[dependencies]
